--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+
+############# Mail Properties ###########################################
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=eeb7bbeb7e2ddf
+spring.mail.password=2a86db510a21e7
+spring.mail.protocol=smtp
