--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.port=8081
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 #spring.jpa.show-sql=true
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
 
 ############# Database PDN Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
