--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,10 @@
-############# Database PDN Properties ###########################################
+server.port=8081
+
+############# Database Dllo Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_f6cc043e8137c87?reconnect=true
-spring.datasource.username=b05d1d25b90ab3
-spring.datasource.password=7181fbc2
+spring.datasource.url=jdbc:mysql://localhost:3306/db_registro_empleados?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=felipe
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
