--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,3 +18,6 @@ spring.mail.port=25
 spring.mail.username=eeb7bbeb7e2ddf
 spring.mail.password=2a86db510a21e7
 spring.mail.protocol=smtp
+
+############ JWT Properties #####################
+jwt.expiration.time=90000
