--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,10 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_trace_param
+
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
@@ -20,4 +24,4 @@ spring.mail.password=2a86db510a21e7
 spring.mail.protocol=smtp
 
 ############ JWT Properties #####################
-jwt.expiration.time=9
+jwt.expiration.time=20
