--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_trace_param
+
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
