Se crea funcion para implementar un certificado en la aplicacion

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=9003
 
 ############# Database Dllo Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -25,3 +25,10 @@ spring.mail.protocol=smtp
 
 ############ JWT Properties #####################
 jwt.expiration.time=20
+
+############ SSL Properties #####################
+server.ssl.enabled=true
+server.ssl.key-store: src/main/resources/bootsecurity.p12
+server.ssl.key-store-password:Felipe
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: bootsecurity
