Se ajusta transformador de persona y se crea funcion para consultar los tipos de documentos

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ jwt.expiration.time=3600
 
 ############ SSL Properties #####################
 server.ssl.enabled=true
-server.ssl.key-store: src/main/resources/bootsecurity.p12
-server.ssl.key-store-password:Felipe
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: bootsecurity
+server.ssl.key-store=src/main/resources/bootsecurity.p12
+server.ssl.key-store-password=Felipe
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=bootsecurity
