--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
             <version>1.6.2</version>
         </dependency>
 
+        <!-- REPORT -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.9.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
